set Researcher researchQuestion CountDown

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -48,15 +48,15 @@
                         <h5>مدت زمان باقی مانده</h5>
                         <div class="wrap text-center">
                             <div class="day">
-                                                <span class="count"></span>
+                                                <span class="count" value="{{day}}">{{day}}</span>
                                 <span>روز</span>
                             </div>
                             <div class="hour">
-                                                <span class="count"></span>
+                                                <span class="count" value="{{hour}}">{{hour}}</span>
                                 <span>ساعت</span>
                             </div>
                             <div class="minute">
-                                                <span class="count"></span>
+                                                <span class="count" value="{{minute}}">{{minute}}</span>
                                 <span>دقیقه</span>
                             </div>
                         </div>
