add day to countDown

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -49,7 +49,7 @@
                         <div class="wrap text-center">
                             <div class="day">
 
-                                <span class="count">{{ second }}</span>
+                                <span class="count">{{ day }}</span>
                                 <span>روز</span>
                             </div>
                             <div class="hour">
