--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -30,7 +30,7 @@
                         </ul>
                         <div class="tab-content">
                             {% for p in projects %}
-                                <div class="card active-question flow-root-display">
+                                <div class="card active-question flow-root-display w-100">
                                     <div class="question-title w-50">
                                         <span class="header">
                                             {{ p.project_form.project_title_persian }}
