--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,10 @@
     cursor: progress !important;
 }
 
+.fc-white {
+    color: #ffffff!important;
+}
+
 body {
     background-color: #f8fdf7;
     font-family: iranyekan, serif;
