--- a/expert/templates/expert/questions.html
+++ b/expert/templates/expert/questions.html
@@ -26,7 +26,7 @@
                     {% if research_questions %}
                         {% for research_question in research_questions %}
                             {% if research_question.status == "not_answered" %}
-                            <div class="card active-question flow-root-display">
+                            <div class="card active-question flow-root-display w-100">
                                 <div class="question-title w-50">{{ research_question.question_title }}</div>
                                 <div class="question-info w-50">
                                     <div class="date w-25"><span>{% calculate_date_past research_question.submitted_date %} قبل</span></div>
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             {% elif research_question.status == "waiting" %}
-                            <div class="card check-question flow-root-display">
+                            <div class="card check-question flow-root-display w-100">
                                 <div class="question-title w-50">{{ research_question.question_title }}</div>
                                 <div class="question-info w-50">
                                     <div class="date w-25"><span>{% calculate_date_past research_question.submitted_date %} قبل</span></div>
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             {% elif research_question.status == "answered" %}
-                            <div class="card close-question flow-root-display">
+                            <div class="card close-question flow-root-display w-100">
                                 <div class="question-title w-50">{{ research_question.question_title }}</div>
                                 <div class="question-info w-50">
                                     <div class="date w-25"><span>{% calculate_date_past research_question.submitted_date %} قبل</span></div>
