--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -55,7 +55,7 @@
                     src="{% static 'industry/img/profile.jpg' %}"
                 {% endif %}
                     alt="profile" class="profile" width="150px" height="150px">
-        <h5>{% block name %}{% endblock %}</h5>
+        <h5 class="fc-white">{% block name %}{% endblock %}</h5>
         <h6>صنعت</h6>
         <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ user.industryuser.industry_points|default:0 }}</span>/10
         </p>
