--- a/researcher/static/researcher/css/style.css
+++ b/researcher/static/researcher/css/style.css
@@ -3180,24 +3180,27 @@ ul.nav-tabs {
 }
 
 .add-new-technique {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: fit-content;
-    display: inline-block;
-    -webkit-border-radius: 0.25em;
-    -moz-border-radius: 0.25em;
-    border-radius: 0.25em;
-    margin-left: 0 !important;
-    margin-bottom: 5px;
-    font-weight: 400;
-    border: none;
-    outline: none;
-    padding: 5px 15px;
-    text-align: center;
-    min-width: 100px;
-    background-color: #89E076;
-    color: #ffffff;
+    /*position: relative;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: fit-content;*/
+    /*display: inline-block;*/
+    /*-webkit-border-radius: 0.25em;*/
+    /*-moz-border-radius: 0.25em;*/
+    /*border-radius: 0.25em;*/
+    /*margin-left: 0 !important;*/
+    /*margin-bottom: 5px;*/
+    /*font-weight: 400;*/
+    /*border: none;*/
+    /*outline: none;*/
+    /*padding: 5px 15px;*/
+    /*text-align: center;*/
+    /*min-width: 100px;*/
+    /*background-color: #89E076;*/
+    /*color: #ffffff;*/
+    position: absolute;
+    top: -35px;
+    left: 5px;
 }
 
 .add-new-technique:hover {
