add Researcher Status & waiting for answer page

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -10,7 +10,7 @@
                     <div class="col-lg-12">
                         <h6 class="green">{{ question_title }}</h6>
                             <div>
-                                {{ question }}
+                                {{ question | linebreaksbr }}
                             </div>
                     </div>
                 </div>
