completed no_technique dialog for researcher

--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -40,9 +40,15 @@
                                     تکنیک‌ها به معنای مهارت‌های آزمایشگاهی‌ای هستند که شما قرار است در پروژه‌ها مورد
                                     استفاده قرار بگیرند؛ به عنوان مثال، RT-PCR و یا H&E Staining هر کدام نمونه‌هایی از
                                     یک تکنیک هستند.
-                                    تکنیک‌های رکن اصلی فعالیت شما در چمران تیم هستند؛ چرا که تنها پروژه‌هایی به شما
-                                    پیشنهاد می‌شود که شما تکنیک‌های مورد نیاز آن را در حساب کاربری‌تان ثبت کرده باشید.
-                                    برای افزودن یک تکنیک به حساب کاربری خود،
+                                    تکنیک‌های رکن اصلی فعالیت شما در چمران تیم هستند؛ چرا که تنها پروژه‌هایی به شما پیشنهاد می‌شود
+                                    که شما تکنیک‌های مورد نیاز آن را در حساب کاربری‌تان ثبت کرده باشید.
+                                    برای افزودن یک تکنیک به حساب کاربری خود، بر روی دکمه
+                                </p>
+                                <span class="disable-success-btn">
+                                    <span>افزودن تکنیک</span>
+                                </span>
+                                <p>
+                                    در گوشه بالا سمت چپ کلیک کنید.
                                 </p>
                             </div>
                         {% endfor %}
