--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -16,7 +16,7 @@
                 <div class="inner-card card no-vr-padding">
                     <div class="techniques-list cover-page">
                         {% for tech in technique_list %}
-                            <div class="card active-question flow-root-display ">
+                            <div class="card active-question flow-root-display w-100">
                                 <div class="technique-title w-50">{{ tech.technique.technique_title }}</div>
                                 <div class="technique-info w-50">
                                     <div class="w-25"></div>
