--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2005,7 +2005,7 @@ div.no-project {
     color: #3ccd1c;
     margin: auto 50px;
     border: 1px dashed #3ccd1c;
-    text-align: right;
+    text-align: justify;
     -webkit-border-radius: 0.25em;
     -moz-border-radius: 0.25em;
     border-radius: 0.25em;
