researching questions tabs fixed in expert account

--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -618,7 +618,8 @@ a.nav-link:hover {
 }
 
 .tab-content {
-    display: flex;
+    position: relative;
+    display: flow-root;
     border: 1px solid #bdbdbd;
     border-top: none;
     background-color: #f8fdf7;
