--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -57,16 +57,19 @@
                                     </div>
                                 </div>
                             {% empty %}
-                                <div class="no-project">
-                                    <img src="{% static 'img/no_project.svg' %}" alt="logo" class="icon">
-                                    <h4>متاسفانه، هنوز پروژه ای مرتبط با تخصص شما ثبت نشده است!</h4>
-                                    <p>پیشنهاد می کنیم دست از کار نکشید و با کلیک بر روی</p>
-                                    <span>
+                                <div class="no-project-container">
+                                    <div class="no-project">
+                                        <img src="{% static 'img/no_project.svg' %}" alt="logo" class="icon">
+                                        <h4>متاسفانه، هنوز پروژه ای مرتبط با تخصص شما ثبت نشده است!</h4>
+                                        <p>پیشنهاد می کنیم دست از کار نکشید و با کلیک بر روی</p>
+                                        <span>
                                         <i class="fas fa-cog"></i>
                                         <span>پروفایل کاربری</span>
                                     </span>
-                                    <p>رزومه خود را کامل کنید تا در هنگام ارسال درخواست انجام پروژه، صنایع با شناخت و
-                                        اطمینان کامل، پروژه شان را به شما بسپارند.</p>
+                                        <p>رزومه خود را کامل کنید تا در هنگام ارسال درخواست انجام پروژه، صنایع با شناخت
+                                            و
+                                            اطمینان کامل، پروژه شان را به شما بسپارند.</p>
+                                    </div>
                                 </div>
                                 {#                                <div class="row">#}
                                 {#                                    <div class="col-lg-12">#}
