check Massage and fix password signup errors

--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -11,9 +11,9 @@
             درخواستی برای انجام پروژه شما از طرف این استاد دریافت شده است.
         </p>
         <div class="button-group">
-            <!-- <button class="show-resume" >مشاهده رزومه</button> -->
-            <!-- <button class="accept-request" >تایید درخواست</button> -->
-            <!-- <button class="reject-request" >رد درخواست</button> -->
+            <button class="show-resume" >مشاهده رزومه</button>
+            <button class="accept-request" >تایید درخواست</button>
+            <button class="reject-request" >رد درخواست</button>
         </div>
     </div>
     <div class="industry-comment"></div>
