--- a/researcher/templates/researcher/layouts/message_show.html
+++ b/researcher/templates/researcher/layouts/message_show.html
@@ -23,7 +23,7 @@
             </div>
             <div class="message-connect">
                     <span>نیاز به راهنمایی دارید ؟</span>
-                    <span class="telegram"><i class="fab fa-telegram-plane fa-lg"></i></span>
+                    <span class="telegram"><a href="https://t.me/chamran_team"><i class="fab fa-telegram-plane fa-lg"></i></a></span>
                     <span class="phone"><i class="fas fa-phone fa-lg"></i></span>
             </div>
         </div>
