fix message login requirment and attachment

--- a/industry/templates/industry/messages.html
+++ b/industry/templates/industry/messages.html
@@ -112,8 +112,10 @@
     <script>
         {#just for test#}
         $("button").click(function(){
+            console.log("----------");
             const id = $(this).attr('id');
             console.log('id is ' + id);
+            console.log(id);
             $.ajax({
                 url: '/message_detail/' + id,
                 data: {},
