--- a/expert/templates/expert/layouts/message_show.html
+++ b/expert/templates/expert/layouts/message_show.html
@@ -25,6 +25,7 @@
                     <span>نیاز به راهنمایی دارید ؟</span>
                     <span class="telegram"><a href="https://t.me/chamran_team"><i class="fab fa-telegram-plane fa-lg"></i></a></span>
                     <span class="phone"><a  href="tel:+989301510096"><i class="fas fa-phone fa-lg"></i></a></span>
+                    <span class="email"><a  href="mailto:info@chamranteam.ir"><i class="fas fa-email fa-lg"></i></a></span>
             </div>
         </div>
     </div>
