--- a/industry/templates/industry/layouts/message_show.html
+++ b/industry/templates/industry/layouts/message_show.html
@@ -5,26 +5,26 @@
         <div class="message-show-head">
             <div class="icon">
                 <div class="title" dir="rtl">
-                    برگزاری رویداد معرفی «چمران تیم»
+                    <!-- <a  href="##"><span class="fas fa-paperclip fa-lg"></span></a> -->
                 </div>
                 <img src="{% static 'industry/img/tick.svg' %}" alt="message-type-icon">
             </div>
         </div>
         <div class="message-show-body">
             <div class="body">
-                نخستین رویداد «چمران تیم»، با عنوان «صنعت دانشگاهی یا دانشگاه صنعتی؟»، یکم تیر ماه، در تالار قریب و دانشجو دانشگاه علوم پزشکی تهران، برگزار شد. این رویداد که در دو بخش کارگاه (Policy Brief) و پنل برگزار شد، پذیرای بیش از ۷۰ نفر از دانشجویان و اساتید دغدغه‌مند و فعال در حوزه ارتباط دانشگاه با صنعت و همچنین تعدادی از مسئولین دانشگاه ع.پ. تهران و وزارت بهداشت بود. هدف از برگزاری این رویداد، احیای دغدغه ارتباط دانشگاه با صنعت در بین دانشگاهیان و جلب مشارکت ایشان برای ایفای نقش در حل این مسئله، بود.
             </div>
             <hr>
             <div class="message-info">
                 <div class="date">
                     <i class="fas fa-calendar-alt"></i>
-                    <span>12 مرداد 1398</span>
+                    <span></span>
                 </div>
             </div>
             <div class="message-connect">
                     <span>نیاز به راهنمایی دارید ؟</span>
                     <span class="telegram"><a href="https://t.me/chamran_team"><i class="fab fa-telegram-plane fa-lg"></i></a></span>
                     <span class="phone"><a  href="tel:+989301510096"><i class="fas fa-phone fa-lg"></i></a></span>
+                    <span class="Email"><a  href="mailto:info@chamranteam.ir"><i class="fas fa-envelope fa-lg"></i></a></span>
             </div>
         </div>
     </div>
