change name notFound to notFound404

--- a/templates/404Template.html
+++ b/templates/404Template.html
@@ -19,7 +19,8 @@
 <h1>خطا 404</h1>
 <h5>صفحه موردنظر یافت نشد</h5>
 <p dir="rtl">
-    با عرض پوزش، صفحه ای که شما به دنبال آن هستید وجود ندارد !
+    <!-- با عرض پوزش، صفحه ای که شما به دنبال آن هستید وجود ندارد ! -->
+    {{ data }}
 </p>
 <p dir="rtl">
     لطفا آدرس وارد شده را بررسی و دوباره امتحان کنید !
