--- a/static/css/style.css
+++ b/static/css/style.css
@@ -498,7 +498,7 @@ a:hover, a:focus {
 input, textarea, select, div.tagsinput {
     background-color: #fefefe;
     border: 1px solid #bdbdbd85;
-    color: #6f7285;
+    color: #484848;
     border-radius: 5px;
     margin-top: 20px;
     direction: rtl;
@@ -804,13 +804,16 @@ hr {
     position: absolute;
     top: 70px;
     left: 0;
+    width: calc(100% - 240px);
+    height: calc(100% - 70px);
+    margin: 0;
     overflow-y: scroll;
-    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .top-bar {
     background-color: #fff;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.16);
     position: absolute;
     top: 0;
     left: 0;
@@ -981,7 +984,7 @@ hr {
 }
 
 .info-card {
-    margin: 20px 100px;
+    margin: 20px 35px;
     padding: 10px;
     color: #6f7285;
 }
@@ -1799,8 +1802,8 @@ span.title-back {
 
 .education-btn, .executive-btn, .research-btn, .paper-btn, .technique {
     position: absolute;
-    top: -55px;
-    left: 5px;
+    top: -46px;
+    left: 0;
 }
 
 /*showProject dialog style*/
@@ -1837,22 +1840,54 @@ span.title-back {
     position: relative;
     display: inline-block;
     background-color: transparent;
-    color: #737373 !important;
+    color: #999 !important;
     font-weight: 600;
-    padding: 5px 2px;
+    padding: 8px 10px;
     margin: 0 2px -2px 0;
     border-radius: 0;
     /* border-bottom: 2px solid #737373; */
     min-width: 75px;
     text-align: center;
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
 }
 
 .nav-pills > .nav-link.active, .nav-pills > .nav-link:hover {
     background-color: transparent;
-    font-weight: 800;
+    /*font-weight: 800;*/
     color: #3ccd1c !important;
     cursor: pointer;
-    border-bottom: 2px solid #3ccd1c;
+}
+
+.nav-pills > .nav-link:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 3px;
+    background-color: #3CCD1C;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+    z-index: 999;
+}
+
+.nav-pills > .nav-link.active:after, .nav-pills > .nav-link:hover:after {
+    width: 100%;
 }
 
 /*.nav-pills > .nav-link::after {*/
@@ -1997,6 +2032,7 @@ ul.tick-ul .out-college-research span:nth-child(2), .B-g {
     color: #3ccd1c;
     font-weight: 800;
 }
+
 div.no-project-container {
     position: absolute;
     top: 0;
@@ -2005,6 +2041,7 @@ div.no-project-container {
     width: 100%;
     display: flex;
 }
+
 div.no-project {
     position: relative;
     height: fit-content;
@@ -2090,11 +2127,16 @@ div.no-project > span.disable-success-btn {
 /*.success-btn:hover {*/
 /*    background-color: #3ccd1c;*/
 /*}*/
+.p-top-15 {
+    padding-top: 15px !important;
+}
+
 .tab-content.cover-page {
     min-height: 67vh;
 }
 
 .tab-content.cover-page > div.card {
+    color: #484848;
     height: fit-content;
 }
 
@@ -2123,6 +2165,190 @@ div.no-project > span.disable-success-btn {
     background-color: #ff4545;
     z-index: -1;
 }
+
 .empty-question {
     margin: auto;
+}
+
+/**/
+
+.h1, .h2, .h3, .h4, .h5 {
+    color: #484848 !important;
+    font-weight: bold !important;
+}
+
+.fs-15 {
+    font-size: 15px !important;
+}
+
+.tab-content.auto-scroll {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.box {
+    /*box-shadow: 0 2px 4px rgba(126, 142, 177, 0.12);*/
+    border-radius: 6px;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    margin-bottom: 10px;
+    color: #484848;
+}
+
+.box .box-header {
+    display: block;
+    border-bottom: 1px solid #00000033;
+    padding: 10px 15px;
+    margin: 0 5px;
+}
+
+.box .box-header h6 {
+    display: inline-block;
+    margin: 0;
+}
+
+.box .box-header div.data-modified {
+    float: left;
+}
+
+.box .box-body {
+    display: block;
+    padding: 10px 20px;
+}
+
+.box .box-body .value span:first-child {
+    color: #3CCD1C;
+    font-weight: bolder;
+    font-size: 25px;
+}
+
+.box .box-body .value span:last-child {
+    color: #3CCD1C;
+}
+
+.box .box-body .default-btn {
+    float: left;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+@media (min-width: 992px) {
+    .lg-left-border {
+        border-left: 1px solid #00000033;
+    }
+}
+
+a.top-button {
+    position: fixed;
+    bottom: -60px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background-color: #ffffff;
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    -ms-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    transition: all ease 0.2s;
+    visibility: hidden;
+    color: #3CCD1C;
+    font-size: 30px;
+    border: 1px solid #3CCD1C;
+}
+
+a.top-button:hover {
+    color: #ffffff;
+    background-color: #3CCD1C;
+    border-color: #3CCD1C;
+}
+
+a.top-button.show {
+    bottom: 10px;
+    visibility: visible;
+}
+
+a.top-button i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.top-page-button {
+    padding: 6px 15px!important;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+/*.top-page-button:after {*/
+/*  content: "";*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 500%;*/
+/*  height: 1000%;*/
+/*  background: #34495E;*/
+/*  z-index: -1;*/
+/*  transform-origin: 0% 0%;*/
+/*  transform: translateX(calc(20% - 25px)) translateY(10%) rotate(-45deg);*/
+/*  /transform: translateY(10%) translateX(16%) rotate(-45deg);*/
+/*  transition: transform .3s;*/
+/*}*/
+/*.top-page-button:hover::after {*/
+/*  transform: translateY(10%) translateX(-25px) rotate(-45deg);*/
+/*}*/
+.border-button {
+    border: 1px solid #3CCD1C;
+    color: #3CCD1C;
+    background-color: #ffffff;
+    -webkit-border-radius: 0.25em;
+    -moz-border-radius: 0.25em;
+    border-radius: 0.25em;
+    padding: 5px 10px;
+}
+.border-button:hover {
+    background-color: #3CCD1C;
+    color: #ffffff;
+}
+/***
+****   Question    ****
+****/
+.box .box-header .active-status {
+    position: relative;
+    top: 50%;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #3CCD1C;
+    float: left;
+}
+
+.box .box-header .check-status {
+    position: relative;
+    top: 50%;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #FFE600;
+    float: left;
+}
+
+.box .box-header .answered-status {
+    position: relative;
+    top: 50%;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #707070;
+    float: left;
 }
