change page ui and cards 1

--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -44,6 +44,7 @@
     </div>
     <div class="content">
         <div class="container">
+            <div id="top"></div>
             {% block content %}{% endblock %}
         </div>
     </div>
