--- a/researcher/static/researcher/css/style.css
+++ b/researcher/static/researcher/css/style.css
@@ -1387,11 +1387,11 @@ a.nav-link:hover {
 }
 
 .tab-content {
-    border: 1px solid #bdbdbd;
-    border-top: none;
-    background-color: #f8fdf7;
-    border-radius: 0 0 0.25em 0.25em;
-    padding: 10px 5px;
+    /*border: 1px solid #bdbdbd;*/
+    /*border-top: none;*/
+    /*background-color: #f8fdf7;*/
+    /*border-radius: 0 0 0.25em 0.25em;*/
+    /*padding: 10px 5px;*/
 }
 
 .project-item {
@@ -1621,25 +1621,25 @@ span.title-back {
 }
 
 .nav-pills > .nav-link {
-    position: relative;
-    display: inline-block;
-    background-color: transparent;
-    color: #737373 !important;
-    font-weight: 600;
-    padding: 5px 2px;
-    margin: 0 2px -2px 0;
-    border-radius: 0;
-    /* border-bottom: 2px solid #737373; */
-    min-width: 75px;
-    text-align: center;
+    /*position: relative;*/
+    /*display: inline-block;*/
+    /*background-color: transparent;*/
+    /*color: #737373 !important;*/
+    /*font-weight: 600;*/
+    /*padding: 5px 2px;*/
+    /*margin: 0 2px -2px 0;*/
+    /*border-radius: 0;*/
+    /*!* border-bottom: 2px solid #737373; *!*/
+    /*min-width: 75px;*/
+    /*text-align: center;*/
 }
 
 .nav-pills > .nav-link.active, .nav-pills > .nav-link:hover {
-    background-color: transparent;
-    font-weight: 800;
-    color: #3ccd1c !important;
-    cursor: pointer;
-    border-bottom: 2px solid #3ccd1c;
+    /*background-color: transparent;*/
+    /*font-weight: 800;*/
+    /*color: #3ccd1c !important;*/
+    /*cursor: pointer;*/
+    /*border-bottom: 2px solid #3ccd1c;*/
 }
 
 /*.nav-pills > .nav-link::after {*/
