change page ui and cards 2

--- a/expert/templates/expert/questions.html
+++ b/expert/templates/expert/questions.html
@@ -254,6 +254,9 @@
             </div>
         </div>
     </div>
+    <a href="#top" class="top-button">
+        <i class="fas fa-angle-up"></i>
+    </a>
 {% endblock %}
 
 {% block script %}{% endblock %}
