--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -23,7 +23,7 @@
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
-            <h3 class="h3 p-top-15">تنظیمات کاربری</h3>
+            <h3 class="h3 border-bottom p-top-15">تنظیمات کاربری</h3>
         </div>
     </div>
     <div class="row">
