--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -21,7 +21,7 @@
         <div class="comments"></div>
     </div>
 </div>
-<div class="card-footer comment">
+<div class="comment">
     <div class="add-comment">
         <form action="" method="post" enctype="multipart/form-data" id="comment-form">
             <input type="text" name="project_id" id="project_id" hidden>
