--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -148,6 +148,9 @@
         {#    {% endfor %} -->#}
         <div class="col-lg-3"></div>
     </div>
+    <a href="#top" class="top-button">
+        <i class="fas fa-angle-up"></i>
+    </a>
 {% endblock %}
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
