--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -2,15 +2,22 @@
 {% load static %}
 {% load widget_tweaks %}
 {% block title %}تنظیمات کاربری{% endblock %}
-{% block name %}{{request.user.industryuser.industryform}}{% endblock %}
+{% block name %}{{ request.user.industryuser.industryform }}{% endblock %}
 {% block content %}
     <div class="row">
+        <div class="col-12 text-right">
+            <h3 class="h3 border-bottom p-top-15">تنظیمات کاربری</h3>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-12">
-            <div class="card info-card user-info text-right">
-                <form enctype="multipart/form-data" method="POST">
-                    {% csrf_token %}
-                    <div class="card-header">اطلاعات شرکت</div>
-                    <div class="inner-card card">
+            <form enctype="multipart/form-data" method="POST">
+                {% csrf_token %}
+                <div class="card box flow-root-display w-100">
+                    <div class="box-header text-right">
+                        <h6>اطلاعات شرکت</h6>
+                    </div>
+                    <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-center">
                                 <label for="id_photo" class="upload text-center">
@@ -89,8 +96,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-header">درباره شرکت</div>
-                    <div class="inner-card card">
+                </div>
+                <div class="card box flow-root-display w-100">
+                    <div class="box-header text-right">
+                        <h6>درباره شرکت</h6>
+                    </div>
+                    <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="sub-header">لطفا چند نمونه از خدمات / محصولاتی را که توسط شرکت شما ارائه می شود، ذکر بفرمایید.</span>
@@ -122,9 +133,12 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="chamran_btn" style="left: 0;bottom: 0">ذخیره تغییرات</button>
-                </form>
-            </div>
+                </div>
+                <button type="submit" class="chamran_btn" style="left: 0;bottom: 0">ذخیره تغییرات</button>
+            </form>
         </div>
     </div>
+    <a href="#top" class="top-button">
+        <i class="fas fa-angle-up"></i>
+    </a>
 {% endblock %}
